install-on-k8s/validate-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: deploy-validate
webhooks:
- name: deploy-validate.default.svc
  # this is the selector of labels
  namespaceSelector:
    matchExpressions:
      - key: deploy-validate
        operator: In
        values:
        - enabled
  rules:
  - apiGroups:
    - "apps"
    apiVersions:
    - "v1"
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments
    scope: "*"
  clientConfig:
    service:
      namespace: default
      name: deploy-validate
      path: /deployment/validating
      port: 443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURGekNDQWYrZ0F3SUJBZ0lKQU9NSFphaERZd1NzTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ0l4SURBZUJnTlYKQkFNTUYyUmxjR3h2ZVMxaGJtNXZMbVJsWm1GMWJIUXVjM1pqTUI0WERUSXpNREl5TkRBeU1Ua3lOVm9YRFRNegpNREl5TVRBeU1Ua3lOVm93SWpFZ01CNEdBMVVFQXd3WFpHVndiRzk1TFdGdWJtOHVaR1ZtWVhWc2RDNXpkbU13CmdnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURKd1VRLzlEMElCc3RscmkyMWMvRHcKWHkyc0g0aHVodWdCTWlwUjhHckpFTHMvSjhkMmpNdmROOFhIL2RrYzdRdzh5c1NPZGp2RDdWMnltVHJDWXg3awpqb0g2NjlWSzZla0 [...]
  admissionReviewVersions:
  - v1
  sideEffects: None
  timeoutSeconds: 10
